<?xml version="1.0" encoding="utf-8"?>
<!--
/*
**
** Copyright 2008, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Option to provide vibrate/haptic feedback on keypress -->
    <string name="vibrate_on_keypress">Vibrate on keypress</string>

    <!-- Option to play back sound on keypress in soft keyboard -->
    <string name="sound_on_keypress">Sound on keypress</string>

    <!-- Option to control whether or not to show a popup with a larger font on each key press. -->
    <string name="popup_on_keypress">Popup on keypress</string>

    <!-- Settings screen title for preferences [CHAR LIMIT=33]-->
    <string name="settings_screen_preferences">Preferences</string>
    <!-- Settings screen title for key press preferences [CHAR LIMIT=33]-->
    <string name="settings_screen_key_press">Key press</string>
    <!-- Settings screen title for appearance preferences [CHAR LIMIT=33] -->
    <string name="settings_screen_appearance">Appearance</string>
    <!-- Settings screen title for keyboard theme settings [CHAR LIMIT=33] -->
    <string name="settings_screen_theme">Theme</string>

    <!-- Units abbreviation for the duration (milliseconds) [CHAR LIMIT=10] -->
    <string name="abbreviation_unit_milliseconds"><xliff:g id="MILLISECONDS">%s</xliff:g>ms</string>
    <!-- The text that represents the current settings value is the system default [CHAR LIMIT=25] -->
    <string name="settings_system_default">System default</string>

    <!-- Option to enable auto capitalization of sentences -->
    <string name="auto_cap">Auto-capitalization</string>
    <!-- Description for option to enable auto capitalization of sentences -->
    <string name="auto_cap_summary">Capitalize the first word of each sentence</string>

    <!-- Preference for input language selection -->
    <string name="select_language">Languages</string>
    <string name="select_language_description" translatable="false">en_US:qwerty;en_US:qwertz;de:qwertz</string>
    <string name="pref_keyboard_color_description" translatable="false">#ECEFF1</string>

    <!-- Description for English (UK) keyboard subtype [CHAR LIMIT=25]
         (UK) should be an abbreviation of United Kingdom to fit in the CHAR LIMIT. -->
    <string name="locale_name_en_GB">English (UK)</string>
    <!-- Description for English (US) keyboard subtype [CHAR LIMIT=25]
         (US) should be an abbreviation of United States to fit in the CHAR LIMIT. -->
    <string name="locale_name_en_US">English (US)</string>
    <!-- Description for Spanish (US) keyboard subtype [CHAR LIMIT=25]
         (US) should be an abbreviation of United States to fit in the CHAR LIMIT. -->
    <string name="locale_name_es_US">Spanish (US)</string>
    <!-- Description for Hinglish (https://en.wikipedia.org/wiki/Hinglish) keyboard subtype [CHAR LIMIT=25] -->
    <string name="locale_name_hi_ZZ">Hinglish</string>
    <!-- Description for Serbian (Latin) keyboard subtype [CHAR LIMIT=25]
         (Latin) can be an abbreviation to fit in the CHAR LIMIT. -->
    <string name="locale_name_sr_ZZ">Serbian (Latin)</string>
    <!-- Description for a keyboard layout listing the language and layout name. -->
    <string name="subtype_generic_layout"><xliff:g id="LANGUAGE_NAME" example="English (US)">%1$s</xliff:g> (<xliff:g id="LAYOUT" example="QWERTY">%2$s</xliff:g>)</string>
    <!-- Description for a traditional keyboard layout, such as Nepali (Traditional). -->
    <string name="subtype_traditional">Traditional</string>
    <!-- Description for a compact keyboard layout, such as Hindi (Compact). -->
    <string name="subtype_compact">Compact</string>
    <!-- Description for Bulgarian (BDS) keyboard layout. -->
    <string name="subtype_bds">BDS</string>
    <!-- Description for Turkish (Q) keyboard layout. -->
    <string name="subtype_q">Q</string>
    <!-- Description for Turkish (F) keyboard layout. -->
    <string name="subtype_f">F</string>
    <!-- Description for Bengali (Akkhor) keyboard layout. -->
    <string name="subtype_akkhor">Akkhor</string>
    <!-- Description for Ergo-L keyboard layout. -->
    <string name="subtype_ergol">Ergo-L</string>
    <!-- Description for Hcesar keyboard layout. -->
    <string name="subtype_hcesar">HCESAR</string>

    <string name="keyboard_theme_dark_border" translatable="false">Material Dark Border</string>
    <string name="keyboard_theme_light_border" translatable="false">Material Light Border</string>
    <string name="keyboard_theme_dark" translatable="false">Material Dark</string>
    <string name="keyboard_theme_light" translatable="false">Material Light</string>
    <string name="keyboard_theme_system" translatable="false">System Default</string>
    <string name="keyboard_theme_system_border" translatable="false">System Default Border</string>

    <!-- Title of the button to add a language in the settings dialog [CHAR LIMIT=15] -->
    <string name="add">Add</string>
    <!-- Title of the button to remove a language in the settings dialog [CHAR LIMIT=15] -->
    <string name="remove">Remove</string>

    <!-- Title of the settings for keypress vibration duration [CHAR LIMIT=35] -->
    <!-- Title of the settings for keypress sound volume [CHAR LIMIT=35] -->
    <string name="prefs_keypress_sound_volume_settings">Keypress sound volume</string>
    <!-- Title of the settings for key long press delay [CHAR LIMIT=35] -->
    <string name="prefs_key_longpress_timeout_settings">Key long press delay</string>

    <!-- Title of the button to revert to the default value of the device in the settings dialog [CHAR LIMIT=15] -->
    <string name="button_default">Default</string>

    <string translatable="false" name="abbreviation_unit_percent"><xliff:g id="PERCENTS">%s</xliff:g>%%</string>
    <string translatable="false" name="abbreviation_unit_dp"><xliff:g id="DENSITY_INDEPENDENT_PIXELS">%d</xliff:g> dp</string>

    <string name="prefs_keyboard_height_settings">Keyboard height</string>
    <string name="prefs_bottom_offset_portrait_settings">Bottom offset</string>
    <string name="keyboard_color">Set custom keyboard color</string>
    <string name="show_special_chars">Show special characters</string>
    <string name="show_language_switch_key">Show language switch key</string>
    <string name="pref_use_on_screen">Show on-screen keyboard</string>
    <string name="pref_use_on_screen_summary">Show on-screen keyboard while using physical keyboard</string>
    <string name="pref_enable_ime_switch">Switch to other keyboards</string>
    <string name="show_number_row">Show separate number row</string>
    <string name="space_swipe">Space swipe cursor move</string>
    <string name="delete_swipe">Delete swipe</string>
    <string name="setup_message">Iris is not enabled. Click OK to open Languages &amp; Input settings. You will need to select Iris in your current keyboard to use it.</string>
    <string name="user_languages">Enabled keyboard languages</string>
    <string name="add_language">Add language</string>
    <string name="remove_language">Remove language</string>
    <string name="generic_language_layouts"><xliff:g id="LANGUAGE_NAME" example="English (US)">%s</xliff:g> keyboard layouts</string>
    <string name="change_keyboard">Change keyboard</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="license">License</string>
    <string name="show_emoji_key">Show emoji key</string>
    <string name="emoji_list">Pinned Sticky Emojis</string>
    <string name="emoji_list_summary">Comma-separated list of favorite sticky emojis shown in the first tab</string>
    <string name="utility_toolbar_category">Utility Toolbar Customization</string>
    <string name="pref_utility_button_order_title">Configure Toolbar Buttons</string>
    <string name="pref_utility_background_color_title">Toolbar Background Color</string>
    <string name="pref_clip_suggestion_timeout_title">Clipboard Suggestion Timeout</string>
    <string name="pref_clip_suggestion_timeout_summary">Time in seconds before clipboard suggestions disappear (default: 60)</string>

    <!-- Backup and Restore Settings -->
    <string name="backup_restore_title">Backup &amp; Restore</string>
    <string name="export_settings_title">Export Settings</string>
    <string name="export_settings_summary">Save your settings to a local JSON file</string>
    <string name="import_settings_title">Import Settings</string>
    <string name="import_settings_summary">Restore settings from a saved JSON file</string>

    <!-- About Section -->
    <string name="about_title">About</string>
    <string name="about_dialog_title">About Iris Keyboard</string>
    <string name="about_developer">Developer</string>
    <string name="about_developer_name">Mohamad Oday</string>
    <string name="about_homeland">Homeland</string>
    <string name="about_homeland_value">Iraq 🇮🇶</string>
    <string name="about_version">Version</string>
    <string name="about_github">GitHub</string>
    <string name="about_telegram">Telegram</string>
    <string name="about_website">Website</string>
    <string name="about_connect_title">Connect</string>
    <string name="about_easter_egg_hint">Tap Homeland or Version for a secret!</string>
    <string name="about_easter_egg_title">Mesopotamia: Cradle of Civilization 🌟</string>
    <string name="about_easter_egg_message">Iraq is home to the ancient civilizations of Sumer, Akkad, Babylon, and Assyria, where history, writing, the wheel, and the code of laws were born! 📜🏛️\n\nThank you for exploring Iris Keyboard! 🌌✨</string>
</resources>

